2006-09-30  Laura Conrad <lconrad@laymusic.org>

	* abc2ly.py adds segno (S) and Coda (O) to articulations.
	
	* abc2ly.py fix so that entering " -- " will translate to a -- in
	the lilypond instead of a " - - "
	
2006-09-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/align-interface.cc: fix typo

	* lily/dynamic-text-spanner.cc (print): Add a special case for
	trill spanner right sides. 

	* scm/define-grobs.scm (all-grob-descriptions): set padding to 0.1

	* lily/align-interface.cc (get_extents_aligned_translates): add
	support for padding variable.

	* lily/break-align-interface.cc (self_align_callback): oops: use
	loop variable in guard.

	* input/regression/repeat-percent-grace.ly: new file.

	* lily/percent-repeat-engraver.cc (start_translation_timestep):
	remember first currentCommandColumn of a grace run. Fixes issue 70.

	* lily/percent-repeat-iterator.cc (class Percent_repeat_iterator):
	move class definition to CC file.

	* lily/multi-measure-rest.cc (percent): use robust_relative_extent()

	* lily/slash-repeat-engraver.cc (listen_percent): don't warn for
	measure-long  repeats.

	* flower/include/international.hh: include stdarg.h

2006-09-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-turn-page-breaking.cc (calc_demerits): now that we allow
	put_systems_on_pages to return an empty result, we need to assign
	demerits properly in that case.
	(put_systems_on_pages): Make the number of pages depend on the
	evenness of page_number. Add auto-first-page-number.
	(calc_subproblem): ensure that the page-number is even for the
	left-hand page. Warn if the first page-turn doesn't fit onto the
	first (right-hand) page.

	* lily/page-spacing.cc (solve): bug: demerits_ would always be inf
	(min_page_count): make this publicly accessible
	(min_page_count): fix a bug when there are forced page breaks that
	was introduced when I made this loop run backwards
	(space_systems_on_n_pages, space_systems_on_n_or_one_more_pages):