@@ -1,3 +1,9 @@
+2006-10-01  Joe Neeman  <joeneeman@gmail.com>
+
+	* lily/page-spacing.cc (compress_lines, uncompress_solution):
+	handle correctly the case where there are multiple \noPageBreaks
+	in a row.
+
 2006-09-30  Laura Conrad <lconrad@laymusic.org>
 
 	* abc2ly.py adds segno (S) and Coda (O) to articulations.
